# agentic-ai-practice-repo

./: README.md
Health-Wellness-Planner-Agent/: guideline-doc.xlsx
Health-Wellness-Planner-Agent/Health-Wellness-Planner-Agent/: agent.py  main.py  pyproject.toml  requirements.txt
Health-Wellness-Planner-Agent/Health-Wellness-Planner-Agent/.chainlit/: config.toml
helloa-agent/: pyproject.toml
helloa-agent/src/helloa_agent/: main.py
helloa-agent/src/helloa_agent/Client/: __init__.py
research-task/: Research-Paper-Agentic-AI.docx  ~$search-Paper-Agentic-AI.docx
step1-uv/project1/: pyproject.toml
step2-open-router/project1/: .env  pyproject.toml  requirements.txt
step2-open-router/project1/src/project1/: __init__.py  __main__.py
step2-open-router/project1/src/project1/openrouter_client/: __init__.py  client.py
step3-liteLLM/lite_llm_project/: main.py  pyproject.toml
step4-hello-agent/: sdk-notes.xlsx
step4-hello-agent/assistant-agent/: config.py  main.py  pyproject.toml
step4-hello-agent/hello-agent/: .env  main.py  pyproject.toml
step4-hello-agent/hello-agent/src/hello_agent/: __init__.py
step4-hello-agent/hello-agent1/: main.py  pyproject.toml
step4-hello-agent/sample-agent1/: main.py  main2.py  pyproject.toml
step4-hello-agent/shetani-calculator/: main.py  pyproject.toml
step5-chainlit/hello-chainlit/: hello.py  pyproject.toml
step5-chainlit/streamed-chatbot/: .env  main.py  main1.py  main2.py  main3.py  main4.py  main5.py  main6.py  pyproject.toml
step5-chainlit/test-chainlit/: hello.py  hello2.py  main.py  pyproject.toml
(+16 files in other folders)
