[project]
name = "helloa-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdul Basit Khalsai", email = "abdulbasitkhalsai@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
helloa-agent = "helloa_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
