[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdul Basit Khalsai", email = "abdulbasitkhalsai@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.0.16",
]

[project.scripts]
project1 = "project1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
